@@ -1233,6 +1233,15 @@ The following elliptic curve types are available:
 * P-384
 * P-521
 
+===== renegotiation
+
+This configures what types of TLS renegotiation are supported. The valid options
+are `never`, `once`, and `freely`. The default value is never.
+
+* `never` - Disables renegotiation.
+* `once` - Allows a remote server to request renegotiation once per connection.
+* `freely` - Allows a remote server to repeatedly request renegotiation.
+
 [[configuration-output-codec]]
 === Output Codec
 
