@@ -84,6 +84,7 @@ func TestValuesSet(t *testing.T) {
     supported_protocols: [TLSv1.1, TLSv1.2]
     curve_types:
       - P-521
+    renegotiation: freely
   `)
 
 	if err != nil {
@@ -99,6 +100,9 @@ func TestValuesSet(t *testing.T) {
 		[]transport.TLSVersion{transport.TLSVersion11, transport.TLSVersion12},
 		cfg.Versions)
 	assert.Len(t, cfg.CurveTypes, 1)
+	assert.Equal(t,
+		tls.RenegotiateFreelyAsClient,
+		tls.RenegotiationSupport(cfg.Renegotiation))
 }
 
 func TestApplyEmptyConfig(t *testing.T) {
@@ -167,6 +171,10 @@ func TestCertificateFails(t *testing.T) {
 		{
 			"unknown curve type",
 			"curve_types: ['unknown curve type']",
+		},
+		{
+			"unknown renegotiation type",
+			"renegotiation: always",
 		},
 	}
 
